scores, wave, clear after collision / needs styling

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
-    "name": "Invasion",
-    "description": "Invasion",
+    "name": "Shepherd",
+    "description": "Shepherd",
     "version": "1.0",
     "action": {
         "default_popup": "popup/popup.html"
