--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     },
     "web_accessible_resources": [
       {
-        "resources": [ "/images/*"],
+        "resources": [ "/hackathon/images/*"],
         "matches": [ "<all_urls>"]
       }
   ],
